# starterpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  license.md  readme.md
.github/: pull_request_template.md  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
cmake/: mylibrary-config.cmake
doc/: code_of_conduct.md  commits.md  contributing.md  security.md  style_guide.md
docs/: CONTRIBUTING.md  SECURITY.md  code_documentation.md  commits.md  contributing.md  style_guide.md
source/: mylibrary.cpp  mylibrary.cppm
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
